--- a/MvcUniversity/Views/Home/Index.cshtml
+++ b/MvcUniversity/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page - MvcUniversity";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">MvcUniversity</h1>
+    <p>Campus management done right
+        
+    </p>
+    <p><img src="../images/ensc.jpg" alt="ENSC" /></p>
 </div>
