--- a/MvcUniversity/Views/Home/Index.cshtml
+++ b/MvcUniversity/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
     <p>Campus management done right
         
     </p>
-    <p><img src="../images/ensc.jpg" alt="ENSC" /></p>
+    <img src="../images/ensc.jpg" alt="ENSC" />
 </div>
