--- a/MvcUniversity/Views/Shared/_Layout.cshtml
+++ b/MvcUniversity/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MvcUniversity - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            made wiht love by the ENSC team</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
